docker compose works with room_db and booking_db